--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pysnmp = "*"
+pysnmp-lextudio = "==6.0.11"
 
 [dev-packages]
+snmpsim-lextudio = "==1.0.6"
 
 [requires]
-python_version = "3.12"
+python_version = "3.8"
